--- a/ui/EditProblemUI.ui
+++ b/ui/EditProblemUI.ui
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>Form</class>
- <widget class="QWidget" handle="Form">
-  <property handle="geometry">
+ <widget class="QWidget" name="Form">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,11 +10,11 @@
     <height>712</height>
    </rect>
   </property>
-  <property handle="windowkind">
+  <property name="windowkind">
    <string>Form</string>
   </property>
-  <widget class="QLabel" handle="label_3">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
     <rect>
      <x>90</x>
      <y>140</y>
@@ -22,15 +22,15 @@
      <height>21</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>What is the Problem's context</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QPushButton" handle="close_button">
-   <property handle="geometry">
+  <widget class="QPushButton" name="close_button">
+   <property name="geometry">
     <rect>
      <x>1740</x>
      <y>20</y>
@@ -38,12 +38,12 @@
      <height>28</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>Close</string>
    </property>
   </widget>
-  <widget class="QPushButton" handle="quit_button">
-   <property handle="geometry">
+  <widget class="QPushButton" name="quit_button">
+   <property name="geometry">
     <rect>
      <x>1640</x>
      <y>20</y>
@@ -51,12 +51,12 @@
      <height>28</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>Quit App</string>
    </property>
   </widget>
-  <widget class="QLineEdit" handle="problem_context_text">
-   <property handle="geometry">
+  <widget class="QLineEdit" name="problem_context_text">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>200</y>
@@ -65,8 +65,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QTableWidget" handle="goal_table">
-   <property handle="geometry">
+  <widget class="QTableWidget" name="goal_table">
+   <property name="geometry">
     <rect>
      <x>750</x>
      <y>50</y>
@@ -75,48 +75,48 @@
     </rect>
    </property>
    <column>
-    <property handle="text">
+    <property name="text">
      <string>0</string>
     </property>
    </column>
    <column>
-    <property handle="text">
+    <property name="text">
      <string>1</string>
     </property>
    </column>
    <column>
-    <property handle="text">
+    <property name="text">
      <string>2</string>
     </property>
    </column>
    <column>
-    <property handle="text">
+    <property name="text">
      <string>3</string>
     </property>
    </column>
    <column>
-    <property handle="text">
+    <property name="text">
      <string>4</string>
     </property>
    </column>
    <column>
-    <property handle="text">
+    <property name="text">
      <string>5</string>
     </property>
    </column>
    <column>
-    <property handle="text">
+    <property name="text">
      <string>6</string>
     </property>
    </column>
    <column>
-    <property handle="text">
+    <property name="text">
      <string>7</string>
     </property>
    </column>
   </widget>
-  <widget class="QLabel" handle="label_4">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
     <rect>
      <x>90</x>
      <y>40</y>
@@ -124,15 +124,15 @@
      <height>21</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>What is the Problem</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" handle="problem_handle_text">
-   <property handle="geometry">
+  <widget class="QLineEdit" name="problem_name_text">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>100</y>
@@ -141,8 +141,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" handle="label_5">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
     <rect>
      <x>90</x>
      <y>260</y>
@@ -150,15 +150,15 @@
      <height>21</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>Which group is this for?</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QComboBox" handle="problem_context_combo">
-   <property handle="geometry">
+  <widget class="QComboBox" name="problem_context_combo">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>161</y>
@@ -167,8 +167,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" handle="problem_handle_combo">
-   <property handle="geometry">
+  <widget class="QComboBox" name="problem_name_combo">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>60</y>
@@ -177,8 +177,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" handle="add_group_button">
-   <property handle="geometry">
+  <widget class="QPushButton" name="add_group_button">
+   <property name="geometry">
     <rect>
      <x>500</x>
      <y>310</y>
@@ -186,12 +186,12 @@
      <height>28</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>add Group/Group</string>
    </property>
   </widget>
-  <widget class="QComboBox" handle="group1_handle_combo">
-   <property handle="geometry">
+  <widget class="QComboBox" name="group1_name_combo">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>281</y>
@@ -200,8 +200,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" handle="add_group_text">
-   <property handle="geometry">
+  <widget class="QLineEdit" name="add_group_text">
+   <property name="geometry">
     <rect>
      <x>500</x>
      <y>280</y>
@@ -210,8 +210,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" handle="label_6">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
     <rect>
      <x>50</x>
      <y>290</y>
@@ -219,15 +219,15 @@
      <height>21</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>1.</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" handle="label_7">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
     <rect>
      <x>50</x>
      <y>320</y>
@@ -235,15 +235,15 @@
      <height>31</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>2.</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" handle="label_8">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
     <rect>
      <x>50</x>
      <y>360</y>
@@ -251,15 +251,15 @@
      <height>31</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>3.</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QComboBox" handle="group2_handle_combo">
-   <property handle="geometry">
+  <widget class="QComboBox" name="group2_name_combo">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>320</y>
@@ -268,8 +268,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" handle="group3_handle_combo">
-   <property handle="geometry">
+  <widget class="QComboBox" name="group3_name_combo">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>360</y>
@@ -278,8 +278,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" handle="label_9">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
     <rect>
      <x>500</x>
      <y>350</y>
@@ -287,15 +287,15 @@
      <height>41</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>Add people to groups in oter interface</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" handle="group1_weight_text">
-   <property handle="geometry">
+  <widget class="QLineEdit" name="group1_weight_text">
+   <property name="geometry">
     <rect>
      <x>380</x>
      <y>280</y>
@@ -304,8 +304,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" handle="label_10">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_10">
+   <property name="geometry">
     <rect>
      <x>400</x>
      <y>260</y>
@@ -313,15 +313,15 @@
      <height>21</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>weight</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" handle="group2_weight_text">
-   <property handle="geometry">
+  <widget class="QLineEdit" name="group2_weight_text">
+   <property name="geometry">
     <rect>
      <x>380</x>
      <y>320</y>
@@ -330,8 +330,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" handle="group3_weight_text">
-   <property handle="geometry">
+  <widget class="QLineEdit" name="group3_weight_text">
+   <property name="geometry">
     <rect>
      <x>380</x>
      <y>360</y>
@@ -340,8 +340,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" handle="label_11">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
     <rect>
      <x>90</x>
      <y>420</y>
@@ -349,15 +349,15 @@
      <height>21</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>What's a thing you're going to do about it</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QComboBox" handle="action1_combo">
-   <property handle="geometry">
+  <widget class="QComboBox" name="action1_combo">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>440</y>
@@ -366,8 +366,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" handle="action1_text">
-   <property handle="geometry">
+  <widget class="QLineEdit" name="action1_text">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>480</y>
@@ -376,8 +376,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" handle="label_12">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
     <rect>
      <x>50</x>
      <y>590</y>
@@ -385,15 +385,15 @@
      <height>31</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>3.</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" handle="label_13">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_13">
+   <property name="geometry">
     <rect>
      <x>50</x>
      <y>520</y>
@@ -401,15 +401,15 @@
      <height>31</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>2.</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" handle="label_14">
-   <property handle="geometry">
+  <widget class="QLabel" name="label_14">
+   <property name="geometry">
     <rect>
      <x>50</x>
      <y>450</y>
@@ -417,15 +417,15 @@
      <height>21</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>1.</string>
    </property>
-   <property handle="wordWrap">
+   <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QComboBox" handle="action2_combo">
-   <property handle="geometry">
+  <widget class="QComboBox" name="action2_combo">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>521</y>
@@ -434,8 +434,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" handle="action2_text">
-   <property handle="geometry">
+  <widget class="QLineEdit" name="action2_text">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>560</y>
@@ -444,8 +444,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" handle="action3_combo">
-   <property handle="geometry">
+  <widget class="QComboBox" name="action3_combo">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>601</y>
@@ -454,8 +454,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" handle="action3_text">
-   <property handle="geometry">
+  <widget class="QLineEdit" name="action3_text">
+   <property name="geometry">
     <rect>
      <x>80</x>
      <y>640</y>
@@ -464,8 +464,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QTreeWidget" handle="baseideaunit">
-   <property handle="geometry">
+  <widget class="QTreeWidget" name="baseideaunit">
+   <property name="geometry">
     <rect>
      <x>1420</x>
      <y>50</y>
@@ -473,17 +473,17 @@
      <height>631</height>
     </rect>
    </property>
-   <property handle="indentation">
+   <property name="indentation">
     <number>15</number>
    </property>
    <column>
-    <property handle="text">
+    <property name="text">
      <string>ideaunit</string>
     </property>
    </column>
   </widget>
-  <widget class="QPushButton" handle="refresh_button">
-   <property handle="geometry">
+  <widget class="QPushButton" name="refresh_button">
+   <property name="geometry">
     <rect>
      <x>1220</x>
      <y>10</y>
@@ -491,12 +491,12 @@
      <height>31</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>Refresh All</string>
    </property>
   </widget>
-  <widget class="QPushButton" handle="load_problem_button">
-   <property handle="geometry">
+  <widget class="QPushButton" name="load_problem_button">
+   <property name="geometry">
     <rect>
      <x>490</x>
      <y>600</y>
@@ -504,12 +504,12 @@
      <height>31</height>
     </rect>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>Load Problem</string>
    </property>
   </widget>
-  <widget class="QCheckBox" handle="view_problems_cb">
-   <property handle="geometry">
+  <widget class="QCheckBox" name="view_problems_cb">
+   <property name="geometry">
     <rect>
      <x>1420</x>
      <y>10</y>
@@ -517,12 +517,12 @@
      <height>41</height>
     </rect>
    </property>
-   <property handle="font">
+   <property name="font">
     <font>
      <pointsize>10</pointsize>
     </font>
    </property>
-   <property handle="text">
+   <property name="text">
     <string>view only problems</string>
    </property>
   </widget>
