--- a/ui/Edit_AgendaUI.ui
+++ b/ui/Edit_AgendaUI.ui
@@ -39,7 +39,7 @@
     <string>Close</string>
    </property>
   </widget>
-  <widget class="QTableWidget" name="goal_table">
+  <widget class="QTableWidget" name="intent_table">
    <property name="geometry">
     <rect>
      <x>40</x>
