--- a/ui/EditPartyUI.ui
+++ b/ui/EditPartyUI.ui
@@ -287,7 +287,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Change Handle to:</string>
+    <string>Change PID to:</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
