--- a/ui/Healing5IssueUI.ui
+++ b/ui/Healing5IssueUI.ui
@@ -551,7 +551,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Healer Handle:</string>
+    <string>Healer PID:</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="issue_10">
