#41 remove "lobby" from codespace

--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -170,7 +170,7 @@
      <string>Manuparty change</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="lobby_button">
+   <widget class="QPushButton" name="loubby_button">
     <property name="geometry">
      <rect>
       <x>380</x>
