--- a/ui/EditIdeaUnitUI.ui
+++ b/ui/EditIdeaUnitUI.ui
@@ -828,10 +828,10 @@
     </font>
    </property>
    <property name="text">
-    <string>Pad</string>
+    <string>parent_road</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="yo_pad">
+  <widget class="QTextEdit" name="yo_parent_road">
    <property name="geometry">
     <rect>
      <x>680</x>
