--- a/ui/EconomyMainUI.ui
+++ b/ui/EconomyMainUI.ui
@@ -10,7 +10,7 @@
     <height>750</height>
    </rect>
   </property>
-  <property name="windowkind">
+  <property name="windowkind" stdset="0">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -908,24 +908,6 @@
      <string>save</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="five_issue_button">
-    <property name="geometry">
-     <rect>
-      <x>450</x>
-      <y>160</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>8</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>5 issue</string>
-    </property>
-   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -933,17 +915,20 @@
      <x>0</x>
      <y>0</y>
      <width>1557</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
-   </property>
-   <property name="accessiblePID">
-    <string>File</string>
    </property>
    <property name="accessibleDescription">
     <string>General Operations</string>
    </property>
+   <property name="accessiblePID" stdset="0">
+    <string>File</string>
+   </property>
    <widget class="QMenu" name="file_menu">
-    <property name="kind">
+    <property name="title">
+     <string/>
+    </property>
+    <property name="kind" stdset="0">
      <string>File</string>
     </property>
     <addaction name="fm_new"/>
